Setup the firestore middleware

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/DisNetwork/cache-tokens#readme",
   "dependencies": {
+    "@google-cloud/firestore": "^1.0.1",
     "express": "^4.16.4"
   },
   "devDependencies": {
