--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/DisNetwork/cache-tokens#readme",
   "dependencies": {
     "@google-cloud/firestore": "^1.0.1",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.1"
   }
 }
